--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
    "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "npm run build:vite",
+  "build:vite": "vite build",
+  "preview": "vite preview"
+},
   "dependencies": {
     "axios": "^1.13.2",
     "framer-motion": "^12.26.2",
