--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-   "scripts": {
+ "scripts": {
   "dev": "vite",
-  "build": "npm run build:vite",
-  "build:vite": "vite build",
+  "build": "vite build",
   "preview": "vite preview"
 },
   "dependencies": {
