--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@vitejs/plugin-react": "^5.1.1",
     "axios": "^1.13.2",
     "framer-motion": "^12.26.2",
+    "nodemon": "^3.1.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
